[package]
name = "interstellar-websockets"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug  = "2.1.0"
futures-util = "0.3.28"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio = { version = "1.15.0", features = ["full"] }
url = "2.2.2"

lazy_static = "1.4.0"

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]